# RelativisticRenderer

./: .gitignore  CMakeLists.txt  README.md
include/: RelativisticRenderer.h  macro.h
include/components/: Camera.h  Object.h  PerspectiveCamera.h  PointLight.h  RectangleObject.h  SphereObject.h  VisibleObject.h
include/material/: DiffuseMaterial.h  Material.h
include/math/: IO.h  math.h  types.h
include/math/mat/: Mat.h  Mat4x4.h
include/math/vec/: LVec.h  Vec.h  Vec2.h  Vec3.h  Vec4.h
include/renderer/: Renderer.h
include/utils/: BMPImage.h  Color.h  PPMImage.h  Random.h  Ray.h  ThreadPool.h  Transformation.h  constants.h
src/: CMakeLists.txt  main.cpp
src/components/: Camera.cpp  Object.cpp  PerspectiveCamera.cpp  PointLight.cpp  RectangleObject.cpp  SphereObject.cpp  VisibleObject.cpp
src/material/: DiffuseMaterial.cpp  Material.cpp
src/renderer/: Renderer.cpp
src/utils/: BMPImage.cpp  Color.cpp  PPMImage.cpp  Random.cpp  Ray.cpp  ThreadPool.cpp  Transformation.cpp
test/: CMakeLists.txt  TestInclude.h
test/components/: SphereObject.cpp
test/math/: LVec4.cpp  Mat4.cpp  Vec3.cpp  Vec4.cpp
test/utils/: Random.cpp  Ray.cpp  Transformation.cpp
